# human-workforce-ai-platform

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  fly.toml  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy-api.yml  deploy-dashboard.yml  deploy.yml
agent1-research/: README.md  __init__.py  main.py
agent1-research/config/: config.yaml  loader.py  research_config.yaml
agent1-research/docs/: ARCHITECTURE.md  example_output.md
agent1-research/fetcher/: rss.py
agent1-research/models/: article.py
agent1-research/output/2026-06-28/: executive_brief.md
agent1-research/pipeline/: brief_builder.py  deduplicator.py  orchestrator.py  scorer.py
agent1-research/storage/: database.py  orm.py  repository.py
agent1-research/utils/: date_utils.py  hashing.py  logging.py  retry.py
agent2-content/: __init__.py
agent3-video/: __init__.py
agent4-publishing/: __init__.py
agent5-analytics/: __init__.py
api/: auth.py  dependencies.py  main.py
api/models/: intelligence_responses.py  responses.py
api/routers/: articles.py  brief.py  health.py  intelligence.py  pipeline.py  plugins.py  sources.py  stats.py  topics.py
config/: logging.yaml  settings.py
dashboard/: index.html  package.json  tailwind.config.ts  vite.config.ts
dashboard/public/: 404.html
dashboard/src/: App.tsx  index.css  main.tsx
dashboard/src/api/: client.ts  index.ts
dashboard/src/components/charts/: ArticlesBySource.tsx  ArticlesByTopic.tsx  DailyVolume.tsx  ScoreDistribution.tsx
dashboard/src/components/layout/: Layout.tsx  Sidebar.tsx
dashboard/src/components/ui/: Badge.tsx  Card.tsx  ErrorState.tsx  ScoreBar.tsx  Spinner.tsx  StatusDot.tsx
dashboard/src/hooks/: useArticles.ts  useBrief.ts  useHealth.ts  usePipeline.ts  useSources.ts  useStats.ts  useTopics.ts
dashboard/src/pages/: Charts.tsx  Home.tsx  Research.tsx  System.tsx
dashboard/src/types/: api.ts
database/: __init__.py
demos/: ai-governance-quiz.html
docs/: plugin-development-guide.md
docs/architecture/: ARCHITECTURE.md  intelligence-engine.md
docs/installation/: INSTALLATION.md
intelligence-engine/intelligence/: __init__.py
intelligence-engine/intelligence/analyzers/: impact_analyzer.py  opportunity_detector.py  trend_detector.py
intelligence-engine/intelligence/config/: defaults.py
intelligence-engine/intelligence/engines/: recommendation_engine.py  scoring_engine.py
intelligence-engine/intelligence/models/: intelligence.py
intelligence-engine/intelligence/output/: writer.py
intelligence-engine/intelligence/pipeline/: intelligence_pipeline.py
plugin-sdk/plugin_sdk/: __init__.py  base.py  config.py  di.py  exceptions.py  manager.py
plugin-sdk/plugin_sdk/events/: __init__.py  bus.py  types.py
plugin-sdk/plugin_sdk/interfaces/: __init__.py  ai_provider.py  analytics.py  knowledge.py  notification.py  publishing.py  research.py  video.py
plugins/: __init__.py  plugins.toml
plugins/intelligence_engine/: plugin.py  plugin.toml
plugins/json_export/: plugin.py  plugin.toml
plugins/local_file_export/: plugin.py  plugin.toml
plugins/markdown_export/: plugin.py  plugin.toml
shared/: __init__.py
shared/constants/: __init__.py
shared/models/: __init__.py
tests/: conftest.py
tests/integration/agent1/: conftest.py  test_pipeline.py
tests/unit/agent1/: conftest.py  test_brief_builder.py  test_config.py  test_deduplicator.py  test_scorer.py
tests/unit/api/: conftest.py  test_articles.py  test_brief.py  test_health.py  test_pipeline.py  test_sources.py  test_stats.py  test_topics.py
tests/unit/intelligence/: conftest.py  test_opportunity_detector.py  test_recommendation_engine.py  test_scoring_engine.py  test_trend_detector.py
tests/unit/plugin_sdk/: conftest.py  test_event_bus.py  test_manager.py  test_service_registry.py
