[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "human-workforce-ai-platform"
version = "0.1.0"
description = "Multi-agent AI platform for human workforce intelligence"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [
    { name = "Human Workforce AI Team" },
]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.13.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "httpx>=0.27.0",
    "anthropic>=0.28.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-json-logger>=2.0.7",
    "feedparser>=6.0.11",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.2.0",
    "pyyaml>=6.0.1",
    "tenacity>=8.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.4",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]
postgres = [
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
]

[tool.hatch.build.targets.wheel]
packages = ["shared", "config", "database"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
# E501: line too long (handled by formatter)
# B008: Depends() in defaults is the FastAPI DI pattern, not a bug
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]
# E402: sys.path must be mutated before importing non-stdlib packages
"agent1-research/main.py" = ["E402"]
"tests/unit/api/conftest.py" = ["E402"]
"tests/unit/intelligence/conftest.py" = ["E402"]
"tests/unit/plugin_sdk/conftest.py" = ["E402"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
# agent1-research has a hyphen so mypy can't import it as a package;
# exclude it and rely on the integration test suite to catch type errors there.
exclude = [
    "dashboard/",
    "docs/",
    "tests/",
    "agent1-research/",
    "agent2-content/",
    "agent3-video/",
    "agent4-publishing/",
    "agent5-analytics/",
    "intelligence-engine/",
    "plugin-sdk/",
    "plugins/",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=. --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
omit = ["tests/*", "*/migrations/*", "dashboard/*"]
